# ult

./: .gitignore  README.md  Zeus_Assistant.spec  agents.md  requirements.txt
.github/workflows/: ci.yml  release.yml
client/: app.js  index.html  style.css
client/src-tauri/: Cargo.toml  tauri.conf.json
sandbox/: Dockerfile
sandbox/test_frameworks/: ch0_test.py  ch10_test.py  ch11_test.py  ch12_test.py  ch13_test.py  ch14_test.py  ch15_test.py  ch16_test.py  ch17_test.py  ch18_test.py  ch19_test.py  ch1_test.py  ch20_test.py  ch21_test.py  ch2_test.py  ch3_test.py  ch4_test.py  ch5_test.py  ch6_test.py  ch7_test.py  ch8_test.py  ch9_test.py
scripts/: first_portal_smoke.py  full_stack_smoke.py  run_dev.sh
server/: build_desktop.py  main.py  qemu_launcher.py  sandbox_manager.py
setup/: build_sandbox.sh  build_templeos_img.sh  install_all.sh
