[package]
name = "zeus_assistant"
version = "1.0.0"
description = "The Sacred Tech: Desktop Assistant Client"
authors = ["Open Source Pilgrim"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
